deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: releasebus-githubapi
  namespace: appstacking
spec:
  type: ClusterIP
  ports:
    - name: rpc
      port: 83
      targetPort: 12004
      protocol: TCP
  selector:
    app: releasebus-githubapi
    ns: appstacking
